namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jsierra
  labels:
    tipo: practica
