service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-sierra-server
  labels:
    app: crud
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30005
    protocol: TCP
  selector:
    app: crud
