servicemysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec: 
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: db
