ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jsierra
spec:
  rules:
  - host: "app.jsierra.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: crud-sierra-server
            port:
              number: 80
